# inequality-analysis

./: .env.example  README.md  acquire_data.ipynb  acquire_data.py  index.html  malaysia_project.db  pyproject.toml
data/clean/: combined_state.csv  cpi_national.csv  cpi_state.csv  dashboard_data.xlsx  data_dictionary.xlsx  health_state.csv  sdi_scores.csv
data/logs/: acquisition_log.txt
data/logs/notebook_runs/: 01_acquire_data.ipynb  02_etl.ipynb  03_eda.ipynb  04_sdi_analysis.ipynb  05_final_report.ipynb
data/raw/: cpi_national.csv  dosm_metadata.json  hh_income_parlimen.csv  hh_income_state.csv  hh_poverty_parlimen.csv  hh_poverty_state.csv  moh_beds.csv  population_state.csv  worldbank_malaysia.csv
docs/: caveats.md  data_dictionary.md  final_report.html  methodology.md  sqlite_quickstart.sql
notebook/: 01_acquire_data.ipynb  02_ETL.ipynb  02_etl.ipynb  02_explore.ipynb  03_eda.ipynb  03_transform.ipynb  04_analysis.ipynb  04_sdi_analysis.ipynb  05_final_report.ipynb  05_visualisation.ipynb  acquire_data.ipynb
notebook/data/raw/: moh_facilities.csv
scripts/: acquire.py  acquire_data.py  config.py  query_db.py  run_pipeline.py  transform.py  upload_to_bq.py  visualise.py
