[project]
name = "inequality-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "requests>=2.33.1",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
